[package]
name = "axolotl-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8.5"
paste = "1.0.9"
tabled = { version = "0.10.0", optional = true, features = ["derive"] }
num-traits = "0.2.15"
bytemuck = { version = "1.12", features = ["derive"] }
axolotl-types = { git = "https://github.com/axolotl-rs/plain-axolotl.git" }
auto_impl = "1.0.1"
minecraft_protocol = { path = "../minecraft_protocol" }
