[package]
name = "axolotl-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axolotl-api = { path = "../axolotl-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8.5"
paste = "1.0.9"

noise = "0.7.0"