[package]
name = "axolotl-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axolotl-api = { path = "../axolotl-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8.5"
paste = "1"
log = "0.4"
thiserror = "1"
tux_lockfree = { git = "https://github.com/wyatt-herkamp/tux_lockfree.git" }
axolotl-noise = { git = "https://github.com/axolotl-rs/axolotl-noise.git", features = ["minecraft"] }
axolotl-world = { path = "../axolotl-world" }
axolotl-items = { path = "../axolotl-items" }

parking_lot = "0.12"
flume = { version = "0.10", features = ["async"] }
itoa = "1"
ahash = "0.8"
dumbledore = { git = "https://github.com/wyatt-herkamp/Dumbledore.git", features = ["dumbledore-macro"] }
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.12", features = ["derive"] }
axolotl-nbt = { git = "https://github.com/axolotl-rs/axolotl-nbt.git", features = ["value", "serde"] }
[dev-dependencies]
simple-log = "1"